syntax = "proto3";

package proxy;

import "google/protobuf/timestamp.proto";

message Verification {
  message Mismatch {
    // The output path.
    string path = 1;

    // Determines if the action inherently non-deterministic.
    bool non_deterministic = 4;

    // Lists the various output digests we got from multiple remote-execution
    // retries.
    repeated string remote_digests = 5;

    // Action digest that produced the mismatching remote digests.
    string action_digest = 6;

    // Lists the various output digests we got from multiple local reruns
    repeated string local_digests = 7;

    // If true, the mismatch is considered expected/known thus can be ignored.
    bool ignored = 8;
  }

  // Any SHA mismatches in the action.
  repeated Mismatch mismatches = 1;

  // The number of overall mismatches. This includes both ignored and
  // non-ignored mismatches
  int32 total_mismatches = 2;

  // The number of ignored mismatches.
  int32 total_ignored_mismatches = 4;

  // The number of digests verified.
  int64 total_verified = 3;
}

// Information and metrics relative to a single instance of reproxy.
message ProxyInfo {
  // Times of various singular events in the lifetime of reproxy.
  map<string, TimeInterval> event_times = 1;
  // Metrics relevant to a single reproxy.
  map<string, Metric> metrics = 2;
  // Flag values from environment variables and command-line args.
  map<string, string> flags = 3;
}

// Generic message to hold data relevant to a specific metric.
message Metric {
  // A single value for the metric.
  oneof value {
    int64 int64_value = 1;
    bool bool_value = 2;
    double double_value = 3;
  }
}

// Copied from https://github.com/bazelbuild/remote-apis-sdks/blob/master/go/api/command/command.proto
// TimeInterval is used to serialize the SDK TimeInterval struct.
message TimeInterval {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
}